# Aleph

./: .gitignore  .mcp.json  CHANGELOG.md  CONSUMER_GUIDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SYSTEM_PROMPT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
bench/: BENCHMARK.md  blame_timing.py  parallel_timing.py  results.json  run.py  tasks.yaml
docs/: LICENSING.md  RESPONSIVENESS_CONTRACT.md
docs/ide-setup/: README.md
scripts/: gen_diagrams.py
src/aleph/: __init__.py  __version__.py  cli.py  pipeline.py
src/aleph/compress/: __init__.py  body_compressor.py  policies.py  summarizer.py
src/aleph/diff/: __init__.py  semantic_diff.py
src/aleph/emit/: __init__.py  file_components.py  format.py  loader.py  serializer.py
src/aleph/epistemic/: __init__.py  store.py
src/aleph/inference/: __init__.py  error_flow.py  intent_inference.py  patterns.py  test_coverage.py
src/aleph/ingest/: __init__.py  languages.py  node_types.py  parser.py
src/aleph/licensing/: __init__.py  validator.py
src/aleph/link/: __init__.py  project_salience.py  salience.py
src/aleph/mcp/: __init__.py  handlers.py  project_router.py  server.py  tools.py
src/aleph/memory/: __init__.py  bench.py  briefing.py  compressor.py  decompressor.py  formats.py  session_memory.py
src/aleph/model/: __init__.py  components.py  enums.py  graph.py  symbol.py
src/aleph/patch/: __init__.py  manager.py
src/aleph/project/: __init__.py  builder.py  cache.py  discovery.py  indexer.py  parallel.py  paths.py
src/aleph/query/: engine.py  semantic.py  workspace.py
src/aleph/store/: __init__.py  export.py  sqlite_store.py
src/aleph/structure/: __init__.py  callgraph.py  hierarchy.py  signatures.py
src/aleph/symbols/: __init__.py  extractor.py  fingerprint.py  id_migration.py  identifier.py  registry.py
src/aleph/temporal/: __init__.py  analyzer.py  git_analyzer.py  git_history.py
src/aleph/util/: __init__.py  ast_utils.py  (+3 more)
tests/: conftest.py
tests/benchmarks/: bench_parse_speed.py  bench_token_reduction.py
tests/integration/: test_bench_resume.py  test_brief_golden.py  test_find_golden.py  test_full_components.py  test_incremental_build.py  test_mcp_server.py  test_memory_cli.py  test_patch_workflow.py  test_project_build.py  test_roundtrip.py  test_roundtrip_corpus.py  test_self_application.py  test_self_application_project.py  test_selftest.py  test_semantic_hash_staleness.py  test_semantic_index.py  test_single_file_pipeline.py  test_sqlite_store.py  test_temporal_project.py  test_temporal_self.py  test_token_reduction.py
tests/property/: test_id_portability.py  test_resume_fidelity.py  test_roundtrip_properties.py  test_semantic_hash_invariants.py  test_symbol_stability.py
tests/unit/: test_auto_migrate.py  test_bench_harness.py  test_body_compressor.py  test_briefing.py  test_build_cache.py  test_callgraph.py  test_cli.py  test_coverage_mapper.py  test_discovery.py  test_epistemic_store.py  test_error_flow.py  test_extractor.py  test_git_analyzer.py  test_git_history.py  test_git_subprocess_stdin.py  test_handshake_purity.py  test_hashing.py  test_hierarchy.py  test_identifier.py  test_indexer.py  test_intent_inference.py  test_loader.py  test_mcp_project_router.py  test_mcp_tools.py  test_memory_compressor.py  test_memory_decompressor.py  test_memory_formats.py  test_parallel_build.py  test_parser.py  test_patch_manager.py  test_patch_span.py  test_progress.py  test_project_builder.py  test_project_coverage.py  test_project_salience.py  test_project_serializer.py  test_query_engine.py  test_registry.py  test_salience.py  test_search_relevance.py  (+12 more)
(+23 files in other folders)
