[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-compiler"
version = "0.5.0"
description = "Universal semantic compression layer for LLMs — compile any codebase into navigable artifacts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pete Copeland"},
]
keywords = ["llm", "semantic", "compression", "mcp", "code-analysis", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tree-sitter>=0.23.0,<0.24",
    "tree-sitter-cpp>=0.23.0,<0.24",
    "tree-sitter-rust>=0.23.0,<0.23.3",
    "tree-sitter-python>=0.23.0,<0.24",
    "tree-sitter-typescript>=0.23.0,<0.24",
    "tree-sitter-go>=0.23.0,<0.24",
    "tiktoken>=0.7.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
]

[project.scripts]
aleph = "aleph.cli:main"

[project.urls]
Homepage = "https://alephnull.ai"
Repository = "https://github.com/alephnullai/aleph"
Issues = "https://github.com/alephnullai/aleph/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
