[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-compiler"
dynamic = ["version"]
description = "Universal semantic compression layer for LLMs — compile any codebase into navigable artifacts"
readme = "README.md"
# Fully free and open source (OSI-approved), effective 2026-07-05. Apache
# over MIT for the express patent grant composing with Patent Pending.
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    {name = "Pete Copeland"},
]
keywords = ["llm", "semantic", "compression", "mcp", "code-analysis", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tree-sitter>=0.23.0,<0.24",
    "tree-sitter-cpp>=0.23.0,<0.24",
    "tree-sitter-rust>=0.23.0,<0.23.3",
    "tree-sitter-python>=0.23.0,<0.24",
    "tree-sitter-typescript>=0.23.0,<0.24",
    "tree-sitter-go>=0.23.0,<0.24",
    "tiktoken>=0.7.0",
    "mcp>=1.0.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# Optional semantic embedding index for `aleph build --semantic`
# (BAAI/bge-small-en-v1.5, 384-dim, ONNX via fastembed). Without it
# Aleph degrades gracefully to lexical-only search.
semantic = [
    "fastembed>=0.4",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
]

[project.scripts]
aleph = "aleph.cli:main"

[project.urls]
Homepage = "https://alephnull.ai"
Repository = "https://github.com/alephnullai/aleph"
Issues = "https://github.com/alephnullai/aleph/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# Single source of truth for the version: src/aleph/__version__.py
version = {attr = "aleph.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
